--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
-  text-align: center;
-}
+.mainDiv {
+  height: 100vh;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
+  background-color: rgb(93, 108, 175);
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+.centerDiv {
+  display: flex;
+  /* border: 5px dashed red; */
+  flex-direction: column;
+  justify-self: flex-start;
+  align-items: center;
+  height: 450px;
+  width: 300px;
+  background-color: white;
+  border-radius: 1.2rem;
+  box-shadow: 0 0.1rem 0.6rem 0.2rem black;
+}
+
+#title {
+  height: 10vh;
+  /* border: 5px dashed rgb(123, 255, 0); */
+
+  margin: 1rem;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   color: white;
+  width: 100%;
+
+  background-color: rgba(99, 77, 160, 0.699);
+}
+#inputBox {
+  /* border:5px dashed rgb(0, 110, 255); */
+  display: flex;
+  height: 10vh;
+  width: 100%;
+  padding:0 10px;
+  justify-content: space-evenly;
+  align-items: center;
+  gap: 4px;
 }
 
-.App-link {
-  color: #61dafb;
+#inputField {
+  height: 1.8rem;
+  width: 230px;
+  outline: none;
+  border-style: none;
+  border-bottom: 2px solid rgba(99, 77, 160, 0.699);
+  font-size: 1.4rem;
+  padding:2px;
+  transition: 0.1s;
+  text-align: center;
+
+}
+#addBtn{
+  border-radius: 0.5rem;
+  text-align: center;
+  font-size: 1.8rem;
+  outline: none;
+  color: white;
+  background-color: rgba(99, 77, 160, 0.699);
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#delBtn {
+  border-radius: 0.5rem;
+  text-align: center;
+  font-size: 0.8rem;
+  font-weight: 600;
+  outline: none;
+  color: white;
+  background-color: rgba(253, 7, 7, 0.76);
+  cursor: pointer;
+}
+#addBtn:hover{
+  background-color: rgb(103, 226, 103);
+  transition: 0.2s;
+}
+
+#listView {
+  display: flex;
+  height: 80vh;
+  width: 100%;
+  font-size: 1rem;
+  /* border:5px dashed rgb(204, 0, 255); */
+  flex-direction: column;
+  align-items: flex-start;
+  justify-self: flex-start;
+}
+#listView > ul {
+  list-style: none;
+}
+/*  */
+.todoList{
+  display: flex;
+  gap:4px;
+  padding: 5px;
 }
